--- a/docroot/index.html
+++ b/docroot/index.html
@@ -11,10 +11,12 @@ Rcvd: <textarea id=rcvd></textarea><p>
 	
 	var rcvd = document.getElementById("rcvd")
 
+	jsond.opts({port:30304})
+
 	function changed(v) {
 		var msg = {m:v}
 		jsond.send(msg, function(response) {
-			rcvd.value = "Response: "+o2j(response);
+			rcvd.value = "Response: "+JSON.stringify(response);
 		})
 	}
 
